--- a/melvinPortfolio/views/partials/page/footer.ejs
+++ b/melvinPortfolio/views/partials/page/footer.ejs
@@ -1,2 +1,8 @@
 <footer>
+	<div class="row">		
+		<p>&copy; 2015 Melvin Wilson. All Rights Reserved</p>
+	</div>
+	<section class="layout">
+		<p>Footer text goes h</p>
+	</section>
 </footer>
