--- a/melvinPortfolio/views/index.ejs
+++ b/melvinPortfolio/views/index.ejs
@@ -6,16 +6,8 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-  <header>
-  	<nav>
-  		<ul>
-  			<li><a href="">Home</a></li>
-  			<li><a href="">About</a></li>
-  			<li><a href="">Contact</a></li>
-  			<li><a href="">Services</a></li>
-  		</ul>
-  	</nav>
-  </header>
+
+    <% include partials/page/header.ejs %>
 
   <div class="container">
   	<div class="row">
