--- a/melvinPortfolio/views/partials/page/header.ejs
+++ b/melvinPortfolio/views/partials/page/header.ejs
@@ -1,2 +1,12 @@
-<header>
-</header>
+  <header>
+  	<nav class="navbar navbar-default" role="navigation">
+  		<div class="container">
+	  		<ul class="nav navbar-nav navbar-right">
+	  			<li><a href="">Home</a></li>
+	  			<li><a href="">About</a></li>
+	  			<li><a href="">Contact</a></li>
+	  			<li><a href="">Services</a></li>
+	  		</ul>
+  		</div>
+  	</nav>
+  </header>
