--- a/melvinPortfolio/views/default.ejs
+++ b/melvinPortfolio/views/default.ejs
@@ -7,8 +7,13 @@
 </head>
 <body>
 	<% include partials/page/header.ejs %>
-	<h1><%= title%></h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quod, praesentium dolor velit culpa cupiditate odio nihil voluptates aliquid eum dolore eligendi quas nobis nam nesciunt odit pariatur minus cum.</p>
+	<div class="container main">
+		<div class="row">
+			<h1><%= title%></h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quod, praesentium dolor velit culpa cupiditate odio nihil voluptates aliquid eum dolore eligendi quas nobis nam nesciunt odit pariatur minus cum.</p>			
+		</div>
+	</div>
+
 
 	<% include partials/page/footer.ejs%>
 	<% include partials/page/jsScripts.ejs%>
