--- a/melvinPortfolio/views/index.ejs
+++ b/melvinPortfolio/views/index.ejs
@@ -3,40 +3,24 @@
   <head>
     <title><%= title %></title>
     <% include partials/page/head.ejs %>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
 
     <% include partials/page/header.ejs %>
 
-  <div class="container">
-  	<div class="row">
-  		<div class="col-sm-6">
-			<div class="primary">
-				<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, repellat, sequi, provident, numquam eum ipsam tempora nesciunt laborum suscipit ab quod iure asperiores ipsum excepturi blanditiis quibusdam corrupti aut fugiat!</div>
-			</div><!-- primary -->
-  		</div>
+    <div class="container text-center pfBtnCntnr main">
+      <div class="row">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-8"> 
+          <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+          <p> Repellendus, repellat, sequi, provident, numquam eum ipsam tempora nesciunt laborum suscipit ab quod iure asperiores ipsum excepturi blanditiis quibusdam corrupti aut fugiat!</p>
+        </div>
+        <div class="col-lg-2"></div>
+      </div><!-- primary -->
+      <a href="" class="btn btn-info btn-lg portfolio">Portfolio</a>
+    </div
 
-  		<div class="col-sm-6">
-			<aside class="secondary">
-				<div>Deleniti, quibusdam, soluta corrupti minima nisi adipisci ut sapiente praesentium delectus blanditiis ullam modi consequatur inventore consectetur a eius sed autem fugiat obcaecati impedit enim tempora ipsum officia provident iure.</div>
-			</aside>
-  		</div>
-  	</div>
-  	
-
-
-  </div>
-
-
-
-
-  <section class="layout">
-
-
-  </section>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+  <section class="layout"></section>
     <% include partials/page/footer.ejs %>
     <% include partials/page/jsScripts.ejs %>
   </body>
