--- a/melvinPortfolio/views/partials/page/head.ejs
+++ b/melvinPortfolio/views/partials/page/head.ejs
@@ -2,3 +2,4 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Melvin Wilson</title>
   <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css">
+  <link rel='stylesheet' href='/stylesheets/style.css' />
