--- a/melvinPortfolio/views/partials/page/header.ejs
+++ b/melvinPortfolio/views/partials/page/header.ejs
@@ -2,10 +2,10 @@
   	<nav class="navbar navbar-default" role="navigation">
   		<div class="container">
 	  		<ul class="nav navbar-nav navbar-right">
-	  			<li><a href="">Home</a></li>
-	  			<li><a href="">About</a></li>
-	  			<li><a href="">Contact</a></li>
-	  			<li><a href="">Services</a></li>
+	  			<li><a href="/">Home</a></li>
+	  			<li><a href="/about">About</a></li>
+	  			<li><a href="/portfolio">Portfolio</a></li>	  			
+	  			<li><a href="/contact">Contact</a></li>
 	  		</ul>
   		</div>
   	</nav>
