--- a/melvinPortfolio/views/contact.ejs
+++ b/melvinPortfolio/views/contact.ejs
@@ -12,20 +12,20 @@
 	<h1><%= title%></h1>
 		<div class="row">
 			<div class="col-lg-6">
-				<form>
+				<form action="/contact-form" method="get">
 					<div class="form-group">
 						<label>Name</label>
-						<input type="text" class="form-control" placeholder="Name">
+						<input type="text" class="form-control" placeholder="Name" name="name">
 					</div>
 					<div class="form-group">
 						<label>Email</label>
-						<input type="mail" class="form-control" placeholder="Email">
+						<input type="mail" class="form-control" placeholder="Email" name="email">
 					</div>
 					<div class="form-group">
 						<label>Comments</label>
 						<textarea class="form-control" rows="6"></textarea>
 					</div>
-					<input type="button" value="Submit" class="btn btn-default">
+					<input type="submit" value="Submit" class="btn btn-default">
 				</form>					
 			</div>	
 		</div>
