--- a/melvinPortfolio/views/index.ejs
+++ b/melvinPortfolio/views/index.ejs
@@ -12,12 +12,12 @@
       <div class="row">
         <div class="col-lg-2"></div>
         <div class="col-lg-8"> 
-          <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+          <h1>"I am the spirit of Liberty"</h1>
           <p> Repellendus, repellat, sequi, provident, numquam eum ipsam tempora nesciunt laborum suscipit ab quod iure asperiores ipsum excepturi blanditiis quibusdam corrupti aut fugiat!</p>
         </div>
         <div class="col-lg-2"></div>
       </div><!-- primary -->
-      <a href="" class="btn btn-info btn-lg portfolio">Portfolio</a>
+      <a href="/portfolio" class="btn btn-info btn-lg portfolio">Portfolio</a>
     </div
 
   <section class="layout"></section>
