--- a/melvinPortfolio/views/partials/page/jsScripts.ejs
+++ b/melvinPortfolio/views/partials/page/jsScripts.ejs
@@ -1,2 +1,3 @@
+<script src="/lib/angular/angular.min.js"></script>
 <script src="/lib/jquery/dist/jquery.min.js"></script>
 <script src="/lib/bootstrap/dist/js/bootstrap.min.js"></script>
